--- a/dacon/2월_운동동작분류AI경진대회/1.ipynb
+++ b/dacon/2월_운동동작분류AI경진대회/1.ipynb
@@ -244,8 +244,8 @@
     "    temp = np.array(train_features[train_features['id'] == uid].iloc[:,2:], np.float32).T\n",
     "    x_train.append(temp)\n",
     "\n",
-    "#x_train = np.array(x_train, np.float32)\n",
-    "#x_train = x_train[:,:,:,np.newaxis]\n",
+    "x_train = np.array(x_train, np.float32)\n",
+    "x_train = x_train[:,:,:,np.newaxis]\n",
     "\n",
     "x_test = []\n",
     "\n",
@@ -253,8 +253,8 @@
     "    temp = np.array(test[test['id'] == uid].iloc[:,2:], np.float32).T\n",
     "    x_test.append(temp)\n",
     "\n",
-    "#x_test = np.array(x_test, np.float32)\n",
-    "#x_test = x_test[:,:,:,np.newaxis]"
+    "x_test = np.array(x_test, np.float32)\n",
+    "x_test = x_test[:,:,:,np.newaxis]"
    ]
   },
   {
