--- a/python_machine_learning/Ch01(01~03.넘파이).ipynb
+++ b/python_machine_learning/Ch01(01~03.넘파이).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-a40469ec5825>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0marray1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-10-a40469ec5825>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0marray1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 10 into shape (4,3)"
      ]
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-7f01f0f59baa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0marray1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0marray4\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0marray1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-12-7f01f0f59baa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0marray1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0marray4\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0marray1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 10 into shape (4)"
      ]
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -557,6 +557,274 @@
     "\n",
     "array5=array2d[[0,1]]\n",
     "print('array2d[[0,1]]=>',array5.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1d > 5 불린 인덱싱 결과 값 : [6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array1d = np.arange(start=1, stop=10)\n",
+    "# [ ] 안에 array1d > 5 Boolean indexing을 적용 \n",
+    "array3 = array1d[array1d > 5]\n",
+    "print('array1d > 5 불린 인덱싱 결과 값 :', array3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False,  True,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array1d > 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "불린 인덱스로 필터링 결과 : [6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean_indexes = np.array([False, False, False, False, False,  True,  True,  True,  True])\n",
+    "array3 = array1d[boolean_indexes]\n",
+    "print('불린 인덱스로 필터링 결과 :', array3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "일반 인덱스로 필터링 결과 : [6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "indexes = np.array([5,6,7,8])\n",
+    "array4 = array1d[ indexes ]\n",
+    "print('일반 인덱스로 필터링 결과 :',array4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본 행렬: [3 1 9 5]\n",
+      "np.sort( ) 호출 후 반환된 정렬 행렬: [1 3 5 9]\n",
+      "np.sort( ) 호출 후 원본 행렬: [3 1 9 5]\n",
+      "org_array.sort( ) 호출 후 반환된 행렬: None\n",
+      "org_array.sort( ) 호출 후 원본 행렬: [1 3 5 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "org_array = np.array([ 3, 1, 9, 5]) \n",
+    "print('원본 행렬:', org_array)\n",
+    "# np.sort( )로 정렬 \n",
+    "sort_array1 = np.sort(org_array)         \n",
+    "print ('np.sort( ) 호출 후 반환된 정렬 행렬:', sort_array1) \n",
+    "print('np.sort( ) 호출 후 원본 행렬:', org_array)\n",
+    "# ndarray.sort( )로 정렬\n",
+    "sort_array2 = org_array.sort()\n",
+    "print('org_array.sort( ) 호출 후 반환된 행렬:', sort_array2)\n",
+    "print('org_array.sort( ) 호출 후 원본 행렬:', org_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "내림차순으로 정렬: [9 5 3 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sort_array1_desc = np.sort(org_array)[::-1]\n",
+    "print ('내림차순으로 정렬:', sort_array1_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "로우 방향으로 정렬:\n",
+      " [[ 7  1]\n",
+      " [ 8 12]]\n",
+      "컬럼 방향으로 정렬:\n",
+      " [[ 8 12]\n",
+      " [ 1  7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array2d = np.array([[8, 12], \n",
+    "                   [7, 1 ]])\n",
+    "\n",
+    "sort_array2d_axis0 = np.sort(array2d, axis=0)\n",
+    "print('로우 방향으로 정렬:\\n', sort_array2d_axis0)\n",
+    "\n",
+    "sort_array2d_axis1 = np.sort(array2d, axis=1)\n",
+    "print('컬럼 방향으로 정렬:\\n', sort_array2d_axis1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "행렬 정렬 시 원본 행렬의 인덱스: [1 0 3 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "org_array = np.array([ 3, 1, 9, 5]) \n",
+    "sort_indices = np.argsort(org_array)\n",
+    "print(type(sort_indices))\n",
+    "print('행렬 정렬 시 원본 행렬의 인덱스:', sort_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "행렬 내림차순 정렬 시 원본 행렬의 인덱스: [2 3 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "org_array = np.array([ 3, 1, 9, 5]) \n",
+    "sort_indices_desc = np.argsort(org_array)[::-1]\n",
+    "print('행렬 내림차순 정렬 시 원본 행렬의 인덱스:', sort_indices_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "성적 오름차순 정렬시 score_array의 인덱스: [0 2 4 1 3]\n",
+      "성적 오름차순 정렬시 name_array의 이름 출력: ['John' 'Sarah' 'Samuel' 'Mike' 'Kate']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "name_array=np.array(['John','Mike','Sarah','Kate','Samuel'])\n",
+    "score_array=np.array([78,95,84,98,88])\n",
+    "\n",
+    "sort_indices_asc=np.argsort(score_array)\n",
+    "print('성적 오름차순 정렬시 score_array의 인덱스:',sort_indices_asc)\n",
+    "print('성적 오름차순 정렬시 name_array의 이름 출력:',name_array[sort_indices_asc])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "행렬 내적 결과:\n",
+      " [[ 58  64]\n",
+      " [139 154]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 2, 3],\n",
+    "              [4, 5, 6]])\n",
+    "B = np.array([[7, 8],\n",
+    "              [9, 10],\n",
+    "              [11, 12]])\n",
+    "\n",
+    "dot_product = np.dot(A, B)\n",
+    "print('행렬 내적 결과:\\n', dot_product)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A의 전치 행렬:\n",
+      " [[1 3]\n",
+      " [2 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 2],\n",
+    "              [3, 4]])\n",
+    "transpose_mat = np.transpose(A)\n",
+    "print('A의 전치 행렬:\\n', transpose_mat)"
    ]
   }
  ],
