--- a/python_machine_learning/Ch02(01~04 Model Selection 소개).ipynb
+++ b/python_machine_learning/Ch02(01~04 Model Selection 소개).ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,14 +180,13 @@
     }
    ],
    "source": [
-    "\n",
     "from sklearn.metrics import accuracy_score\n",
     "print('예측 정확도: {0:.4f}'.format(accuracy_score(y_test,pred)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -527,29 +526,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[ 30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47\n",
+      "  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65\n",
+      "  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83\n",
+      "  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99 100 101\n",
+      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119\n",
+      " 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
+      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26 27 28 29]\n",
       "\n",
       "#1 교차 검증 정확도 :1.0, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#1 검증 세트 인덱스:[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29]\n",
+      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
+      "  18  19  20  21  22  23  24  25  26  27  28  29  60  61  62  63  64  65\n",
+      "  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83\n",
+      "  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99 100 101\n",
+      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119\n",
+      " 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
+      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
+      "[30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53\n",
+      " 54 55 56 57 58 59]\n",
       "\n",
       "#2 교차 검증 정확도 :0.9667, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#2 검증 세트 인덱스:[30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53\n",
       " 54 55 56 57 58 59]\n",
+      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
+      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
+      "  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53\n",
+      "  54  55  56  57  58  59  90  91  92  93  94  95  96  97  98  99 100 101\n",
+      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119\n",
+      " 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
+      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
+      "[60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83\n",
+      " 84 85 86 87 88 89]\n",
       "\n",
       "#3 교차 검증 정확도 :0.8667, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#3 검증 세트 인덱스:[60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83\n",
       " 84 85 86 87 88 89]\n",
+      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
+      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
+      "  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53\n",
+      "  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71\n",
+      "  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89\n",
+      " 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
+      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
+      "[ 90  91  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107\n",
+      " 108 109 110 111 112 113 114 115 116 117 118 119]\n",
       "\n",
       "#4 교차 검증 정확도 :0.9333, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#4 검증 세트 인덱스:[ 90  91  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107\n",
       " 108 109 110 111 112 113 114 115 116 117 118 119]\n",
+      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
+      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
+      "  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53\n",
+      "  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71\n",
+      "  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89\n",
+      "  90  91  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107\n",
+      " 108 109 110 111 112 113 114 115 116 117 118 119]\n",
+      "[120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
+      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
       "\n",
       "#5 교차 검증 정확도 :0.7333, 학습 데이터 크기: 120, 검증 데이터 크기: 30\n",
       "#5 검증 세트 인덱스:[120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
@@ -564,6 +608,9 @@
     "\n",
     "# KFold객체의 split( ) 호출하면 폴드 별 학습용, 검증용 테스트의 로우 인덱스를 array로 반환  \n",
     "for train_index, test_index  in kfold.split(features):\n",
+    "    print(train_index)\n",
+    "    print(test_index)\n",
+    "    #print(kfold.split(features))\n",
     "    # kfold.split( )으로 반환된 인덱스를 이용하여 학습용, 검증용 테스트 데이터 추출\n",
     "    X_train, X_test = features[train_index], features[test_index]\n",
     "    y_train, y_test = label[train_index], label[test_index]\n",
@@ -586,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +645,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
